<resources>
    <string name="app_name">Module_14</string>
    <string name="app_logo">Умный конвертер</string>
    <string name="hint_textfilt">Вводите число здесь</string>
    <string name="button_text">Конвертировать</string>
    <string name="second_activity_text">Фрагменты</string>
    <string name="fragment_btn_first">Фрагмент 1</string>
    <string name="fragment_btn_second">Фрагмент 2</string>
    <string name="fragment_btn_nothing">Ничего не делаю</string>
    <string name="boykisser">boykisser</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment!Hello blank fragment!Hello blank fragment</string>
</resources>