<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_logo"
        android:textColor="@color/text_labes"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_labes"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/user_textfielt"
        app:layout_constraintStart_toStartOf="@+id/user_textfielt"
        app:layout_constraintTop_toBottomOf="@+id/conver_btn" />

    <Button
        android:id="@+id/conver_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="61dp"
        android:onClick="ConvertSpeed"
        android:text="@string/button_text"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/user_textfielt"
        app:layout_constraintTop_toBottomOf="@+id/user_textfielt"
        app:rippleColor="#FF0000"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/user_textfielt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/hint_textfilt"
        android:ems="10"
        android:hint="@string/hint_textfilt"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageButton
        android:id="@+id/btn_next_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>